--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Build site
         run: bun run build
         
+      - name: List dist contents
+        run: ls -la dist/
+        
       - name: Setup Pages
         uses: actions/configure-pages@v4
         
@@ -48,6 +51,9 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      pages: write
+      id-token: write
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
