--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,41 @@
 name: Deploy to GitHub Pages
-
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
-
+    branches: [main]
 permissions:
   contents: write
-
 concurrency:
   group: "gh-pages"
   cancel-in-progress: false
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
-
       - name: Install dependencies
         run: bun install
-
       - name: Build site
         run: bun run build
-
       - name: List dist contents
         run: ls -la dist/
-
       # Deploy preview to gh-pages/pr-<PR number>/ on PRs
       - name: Deploy PR preview to gh-pages/pr-${{ github.event.number }}/
         if: github.event_name == 'pull_request'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
+          publish_branch: main
           publish_dir: ./dist
           destination_dir: pr-${{ github.event.number }}
           keep_files: true
           commit_message: "docs(preview): PR #${{ github.event.number }} ${{ github.sha }}"
-
       # Deploy production to gh-pages root on push to main
       - name: Deploy production to gh-pages
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
