feat: setup jsx templating with ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,19 @@
 {
   "compilerOptions": {
-    // Environment setup & latest features
-    "lib": ["ESNext"],
-    "target": "ESNext",
-    "module": "Preserve",
+    // Stable targets for broad browser support
+    "lib": ["ES2023", "DOM", "DOM.Iterable"],
+    "target": "ES6",
+    "module": "preseve",
     "moduleDetection": "force",
-    "jsx": "react-jsx",
+
+    // Classic JSX with custom factory (no React)
+    "jsx": "react",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment",
     "allowJs": true,
 
     // Bundler mode
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
@@ -25,5 +29,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "include": ["src"]
 }
