--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   "dependencies": {},
   "devDependencies": {
     "@types/bun": "latest",
-    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "tailwindcss": "^4.1.13",
-    "@tailwindcss/cli": "^4.1.13",
-    "typescript": "^5"
+    "@tailwindcss/cli": "^4.1.13"
   }
 }
